# fhe-repo-exp

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE.bzlmod  bazel-bin  bazel-fhe-repo-exp  bazel-out  bazel-testlogs  fhe_xls.bzl  simple_sum.cpp  simple_sum.h
bazel/: BUILD.bazel  import_llvm.bzl  import_xls.bzl
simple_sum/: BUILD  simple_sum.cc
